alignment bug (css), need to populate dropdown menu

--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,9 @@
   }
 }
 
+/*
 .App-header {
-  background-color: #282c34;
+  background-color: cyan;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -23,7 +24,7 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
+*/
 .App-link {
   color: #61dafb;
 }
@@ -35,295 +36,4 @@
   to {
     transform: rotate(360deg);
   }
-}
-
-/*---------------------------------------------------------------------------*/
-/*------------------------------- MY OWN ------------------------------------*/
-/*---------------------------------------------------------------------------*/
-
-/* ---------- BODY --------------------------------- */
-body {
-  /* Some browsers (like Chrome) include a small margin around the <body> by
-    default. Our application doesn't need this margin (we would like the UI to
-    extend all the way to the top and bottom of the screen), so we remove this
-    margin below.
-  */
-  margin: 0px;
-  padding: 0px;
-
-  /* Set the default font family and font color for our application. */
-  font-family: 'Roboto';
-  color: #000000;
-
-  /* Set the background color  */
-  background-color: #ffffff;
-}
-
-/* --------------- HEADER ----------------------- */
-header {
-  /*flexbox*/
-  display:flex;
-  
-}
-
-h1{
-  margin-top: 1.5em;
-  font-size: 40px;
-  font-weight: normal;
-}
-
-.header-right{  
-  flex-direction: column;
-  flex-grow: 1
-}
-
-hr {
-  margin-top: 1em;
-  margin-bottom: 0.5em;
-  margin-left: auto;
-  margin-right: auto;
-  border-style: solid;
-  border-width: 5px;
-  color:#000000;
-
-}
-
-#logo-img {
-  width: 500px;
-  height: 300px;
-  z-index: 1;
-  margin-top: 2em;
-  margin-left: 2em;
-  margin-right:2em;
-  
-}
-
-.navbar {
-  text-align:right; 
-  vertical-align: middle;
-  color: black;
-  margin-top:90px;
-	background-color: #ffffff;
-  position:relative;
-}
-
-.navbar a{
-  font-size: 35px;
-	padding: 3px;
-  display: inline-block;
-  margin-right: 110px;
-  text-decoration: none;
-  color: black; 
-}
-
-
-.navbar a:visited { 
-  text-decoration: none; 
-  color: black; 
-  text-decoration: none; 
- }
-.navbar a:hover{
-	background-color: #ffff00;
-  text-decoration: none;
-  color: black; 
-}
-
-.navbar a.selected{
-  font-weight: bold;
-  background-color: #ffff00;
-  text-decoration: none;
-  color: black; 
-}
-
-.navtab{
-  z-index:0;
-}
-
-#cart-summary{
-  z-index: 1;
-  margin-right: 110px;
-}
-
-#itemAddedPopup{
-  z-index: 2;
-  border-style: solid;
-  background-color: white;
-  border-color:gray;
-  margin-right: 45px;
-  text-align:left;
-  position:absolute;
-  right: 0.1em;
-  width: 200px;
-  padding: 1px 10px;
-}
-
-.popupBold{
-  font-size: 15px;
-  font-weight: bold;
-}
-
-.popupBodyText{
-  font-size: 15px;
-}
-
-
-.notecard-thumbnail {
-  width: 375px;
-  height:375px;
-  border-style: solid;
-  border-width: thick;
-  border-color: black;
-
-}
-
-
-h3 {
-  font-size: 30px;
-}
-
-p {
-  font-size: 20px;
-}
-
-
-
-/*drop down menu button BEGIN*/
-.dropdown-menu{
-  width: 250px;
-  border: 1px solid black;
-  border-width: medium;
-  overflow: hidden; 
-  display: flex;
-  align-items:center;
-  padding: 5px 5px 5px 5px; /*top right bottom left*/
-}
-
-select {
-  appearance: none;
-  width: 250px;
-  border: 1px solid black;
-  border-width: medium;
-  overflow: hidden; 
-  display: flex;
-  align-items:center;
-  height: 45px;
-  font-size: 20px;
-}
-
-.selected-option{
-  width: 300px;
-  float:left; /* add this */
-  font-size: 20px;
-}
-.triangle-down {
-  width: 0;
-  height: 0;
-  border-left: 12px solid transparent;
-  border-right: 12px solid transparent;
-  border-top: 10px solid black;
-  float: right; /* add this */
-}
-/*drop down menu button END */
-
-
-
-
-
-/*------------- Select Pack Size ---------------*/
-.pack-size-buttons{
-  display: flex;
-  column-gap: 15px;
-  font-size: 20px;
-}
-
-
-.pack-size-buttons-list{
-  display: flex;
-  /*justify-content: space-between;*/
-  column-gap: 20px;
-}
-.pack-size-button{
-  width:45px;
-  height:45px;
-  background-color: white;
-  font-size: 20px;
-  text-align: center;
-  vertical-align: middle;
-  line-height: 50px; /*WHY NECESSARY?*/
-  border: 1px solid black;
-  border-width:medium;
-  
-}
-.pack-size-button-text{
-  vertical-align: middle;
-}
-.gray{
-  background-color:rgb(172, 168, 168);
-}
-
-
-
-/*---------- Add To Cart button --------------*/
-.add-to-cart-button{
-  width: 250px;
-  height: 40px;
-  border: 1px solid black;
-  border-width: medium;
-  overflow: hidden; /* add this to contain floated children */
-  display: flex;
-  align-items:center;
-  padding: 5px 5px 5px 5px; /*top right bottom left*/
-}
-
-.add-to-cart-button:hover{
-  background-color: #ffff00;
-}
-
-.addtocart-text{
-  margin-left: auto;
-  margin-right: auto;
-}
-
-
-/*----- product description organization (flexbox) ------------ */
-
-.belowThumbnail {
-  margin-left: 5px;
-  width:375px;
-}
-
-.product-desc-row{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 100%;
-  align-items:baseline;
-}
-
-.product-desc-col{
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 1;
-}
-
-
-/*------- product card list organization (flexbox)------------ */
-.product-card-list {
-  margin: 100px;
-}
-
-.listing-row {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 100%;
-  margin-bottom: 100px;
-}
-
-.product-card {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 100%;
-  flex: 1;
 }
